[package]
name = "api"
version = "0.1.0"
authors = ["Arthurdw <mail@arthurdw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.3"
serde = "1.0.118"
chrono = "0.4.19"
dotenv = "0.15.0"
uuid = "0.8.1"
postgres = { version = "0.19.0", features = ["with-uuid-0_8"] }
