[package]
name = "api"
version = "0.1.0"
authors = ["Arthurdw <mail@arthurdw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.3"
serde = "1.0.118"
serde_json = "1.0.61"
chrono = "0.4.19"
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
postgres = { version = "0.19.0", features = ["with-uuid-0_8"] }
md5 = "0.7.0"
reqwest = "0.11.0"
